--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -53,6 +53,9 @@
   p:last-of-type {
     margin-bottom: 0;
   }
+  small {
+    font-size: .5em;
+  }
   main {
     display: flex;
     max-width: 1024px;
@@ -120,13 +123,14 @@
     width: 36px;
     height: 36px;
   }
-  #previousCities {
+  #previousCitiesBtns {
     display: none;
     padding-top: 15px;
     margin-top: 15px;
     border-top: 1px solid var(--marianBlue);
   }
-  #previousCities button {
+  #previousCities button,
+  #previousCitiesBtns button {
     display: block;
     width: 100%;
     background-color: var(--lightBlue05);
@@ -137,7 +141,10 @@
     margin-bottom: 5px;
     font-size: inherit;
   }
-  #previousCities button:hover {
+  button#deleteHistory {
+    display: none;
+  }
+  #previousCitiesBtns button:hover {
     background-color: var(--lightBlue1);
     cursor: pointer;
   }
@@ -153,10 +160,15 @@
     position: relative;
     height: 200px;
     text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.3) 0px 19px 38px, rgba(0, 0, 0, 0.22) 0px 15px 12px;
   }
   #currentWeather h2 {
     text-align: left;
     font-size: 2rem;
+  }
+  #currentWeather h3 {
+    padding: 30px;
+    line-height: 1.5rem;
   }
   #currentWeather > p:first-of-type {
     position: absolute;
@@ -203,9 +215,13 @@
     padding: var(--pad20);
     border-radius: var(--borderRadius);
     text-align: center;
+    box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   }
   .article-wrapper > article h3 {
     margin-bottom: 0;
+  }
+  .article-wrapper > article h3 {
+    line-height: 1em;
   }
   .article-wrapper > article p {
     margin: 0;
